--- a/frontend/src/components/SingleGroupListItem/index.css
+++ b/frontend/src/components/SingleGroupListItem/index.css
@@ -14,14 +14,32 @@
     padding-top: 10px;
 }
 
+.group-details{
+    padding-left: 15px;
+}
+
+.group-citystate{
+    color: rgb(33, 33, 109)
+}
+
 .group-image {
-    padding-right: 25px;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    padding-left: 10px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    margin-left: 20px;
+    margin-right: 10px;
     height: 150px;
     width: 150px;
-    border-radius: 10px;
+    border-radius: 10%;
+}
+
+.preview-image {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.group-about{
+    text-align: justify;
 }
 
 .group-details {
