working suv-nav on browse page with bbasic styling

--- a/frontend/src/components/GroupsPage/index.css
+++ b/frontend/src/components/GroupsPage/index.css
@@ -3,14 +3,16 @@
 }
 
 .outer-group-column{
-    margin-left: 5%;
-    margin-right: 5%;
+    display: flex;
+    justify-content: center;
 
 
 }
 
 .inner-group-column{
     display: flex;
+    justify-content: center;
+    flex-direction: column;
     width: 600px;
 }
 
