--- a/frontend/src/components/GroupDetailPage/index.css
+++ b/frontend/src/components/GroupDetailPage/index.css
@@ -12,10 +12,11 @@
 }
 
 .preview-image {
-    max-width: 600px;
-    max-height: 400px;
-    width: auto;
-    height: auto;
+    object-fit: cover;
+    /* max-width: 600px;
+    max-height: 400px; */
+    width: 100%;
+    height: 400px;
 }
 
 .upper-left-info {
