--- a/frontend/src/components/LandingPage/index.css
+++ b/frontend/src/components/LandingPage/index.css
@@ -8,11 +8,10 @@
 .landing-upper{
     width: 100%;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     flex-direction: row;
     column-gap: 30px;
-    margin-right: 30px;
-    margin-left: 30px;
+
 
 }
 
@@ -93,7 +92,7 @@
     text-align: center;
     font-weight: bold;
     font-size: 16px;
-    color: black;
+    color: rgb(0, 130, 148);
 }
 
 .lower-item-p {
