added hover effect and onclick handler for join btn

--- a/frontend/src/components/LandingPage/index.css
+++ b/frontend/src/components/LandingPage/index.css
@@ -115,6 +115,9 @@
     border: none;
     font-size: 14px;
     font-weight: bold;
+}
 
-
+.join-landing-btn:hover {
+    background-color: rgb(36, 136, 149);
+    cursor: pointer;
 }
