--- a/frontend/src/components/GroupDetailPage/groupDetailPage.css
+++ b/frontend/src/components/GroupDetailPage/groupDetailPage.css
@@ -42,6 +42,9 @@
 .mid {
     border-top: 2px solid lightgray;
     border-bottom: 2px solid lightgray;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
 }
 
 .group-nav-active {
