--- a/frontend/src/components/LoginFormModal/loginForm.css
+++ b/frontend/src/components/LoginFormModal/loginForm.css
@@ -1,5 +1,5 @@
 .login-modal-main-div {
-    height: 600px;
+    height: 460px;
     width: 400px;
     border-radius: 30px;
     background-color: white;
@@ -27,12 +27,85 @@
 .lm-log-in-title {
     font-weight: bolder;
     font-size: 30px;
+    margin-top: 25px;
+    margin-bottom: 25px;
 }
+
 .lm-div-top {
     display: flex;
-    flex-direction: column-reverse;
+    flex-direction: column;
     align-items: center;
-    margin-top: 20px;
-    margin-bottom: 20px;
-    row-gap: 30px;
+}
+
+.lm-input-div {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+}
+
+.lm-input-inner-div {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 16px;
+}
+
+.lm-pseudo-input {
+    display: flex;
+    justify-content: center;
+    border: 1px solid rgb(211, 211, 211);
+    width: 342px;
+    height: 35px;
+    border-radius: 10px;
+    margin-top: 1px;
+}
+
+.lm-pseudo-input:hover {
+    border: 1px solid rgb(83, 83, 83);
+}
+
+.lm-pseudo-input:focus-within {
+    border: 1px solid rgb(0, 130, 148);
+}
+
+.lm-input-label {
+    width: 100%;
+    font-weight: bold;
+    font-size: 16px;
+}
+
+.lm-input-field {
+    width: 90%;
+    border: none;
+
+}
+
+.lm-login-btn-div {
+    display: flex;
+    flex-direction: column;
+    row-gap: 8px;
+    justify-content: center;
+    align-items: center;
+}
+
+.lm-login-btn {
+    margin-top: 15px;
+    height: 40px;
+    width: 342px;
+    border-radius: 10px;
+    border: none;
+    background-color: #f64060;
+    color: white;
+    font-size: 16px;
+    font-weight: bold;
+    cursor: pointer;
+}
+
+.lm-login-btn:hover {
+    background-color: #ff8198;
+}
+
+
+
+.lm-login-btn:active {
+    transform: scale(0.95);
 }
