--- a/frontend/src/components/GroupDetailPage/groupDetailPage.css
+++ b/frontend/src/components/GroupDetailPage/groupDetailPage.css
@@ -1,56 +1,181 @@
-.main-page {
+.gd-main-page {
+    display: flex;
+    flex-direction: column;
 
 }
 
-.upper {
+.gd-upper {
+    color: rgb(44, 44, 44);
     display: flex;
     flex-direction: row;
+    height: 360px;
+    margin-left: 80px
 }
 
-.img-div {
-
-}
-
-.preview-image {
+.gd-img-div {
+    height: 337px;
+    width: 600px;
     object-fit: cover;
-    /* max-width: 600px;
-    max-height: 400px; */
-    width: 100%;
-    height: 400px;
+    background-position: center center;
+    overflow: hidden;
+    position: relative;
 }
 
-.upper-left-info {
-
-}
-
-.title {
-
-}
-
-.location {
-
-}
-
-.member-count {
-
-}
-
-.organizer {
+.gd-preview-image {
+    position: absolute;
+    left: -1000%;
+    right: -1000%;
+    top: -1000%;
+    bottom: -1000%;
+    margin: auto;
+    min-height: 100%;
+    max-height: 100%;
+    min-width: 100%;
+    max-width: auto;
+    border-radius: 10px;
 
 }
 
-.mid {
+.gd-upper-right-info {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    margin-left: 50px;
+    row-gap: 10px;
+
+}
+
+.gd-title {
+    font-size: 40px;
+}
+
+.gd-location-grp {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+    column-gap: 8px;
+}
+
+.gd-map-icon {
+    height: 20px;
+    width: auto;
+    margin-right: 12px;
+    margin-left: 3px;
+    filter: invert(60%) sepia(0%) saturate(0%) hue-rotate(205deg) brightness(94%) contrast(94%);
+}
+
+.gd-location {
+
+}
+
+.gd-member-grp {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+    column-gap: 8px;
+}
+
+.gd-member-icon {
+    height: 20px;
+    width: auto;
+    margin-right: 2px;
+    filter: invert(60%) sepia(0%) saturate(0%) hue-rotate(205deg) brightness(94%) contrast(94%);
+}
+
+.gd-member-count {
+
+}
+
+.gd-organizer-grp {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+    column-gap: 8px;
+}
+
+.gd-organizer-icon {
+    height: 20px;
+    width: auto;
+    filter: invert(60%) sepia(0%) saturate(0%) hue-rotate(205deg) brightness(94%) contrast(94%);
+    margin-left: 2px;
+    margin-right: 5px;
+}
+
+.gd-organizer-lead-in {
+
+}
+
+.gd-organizer-info {
+    color: black;
+    font-weight: bold;
+}
+
+.gd-mid {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
     border-top: 2px solid lightgray;
     border-bottom: 2px solid lightgray;
+}
+
+
+.gd-group-nav {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    align-items: center;
+    height: 50px;
+    font-size: 18px;
+    column-gap: 20px;
+    margin-left: 80px;
 }
 
-.group-nav-active {
 
+.gd-group-nav-link {
+    color: rgb(107, 107, 107);
+    display: flex;
+    flex-direction: row;
+    text-decoration: none;
+    text-decoration-color: currentColor;
 }
 
-.group-nav {
+.gd-group-nav-link:hover {
+    color:rgb(0, 130, 148);
+}
 
+.gd-group-nav-link-active {
+    display: flex;
+    flex-direction: row;
+    column-gap: 20px;
+    color:rgb(0, 130, 148);
+}
+
+.gd-owner-buttons-grp {
+    display: flex;
+    flex-direction: row;
+    column-gap: 20px;
+    margin-right: 50px;
+}
+
+.gd-owner-btn {
+    height: 35px;
+    width: 120px;
+    border-radius: 6px;
+    border: none;
+    background-color: #f64060;
+    color: white;
+    font-size: 16px;
+    font-weight: bold;
+    cursor: pointer;
+}
+
+.gd-owner-btn:hover {
+    background-color: #ff8198;
+}
+
+.gd-owner-btn:active {
+    transform:scale(.95)
 }
