--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -5,7 +5,7 @@
     border-bottom: 2px solid rgb(236, 236, 236);
     height: 50px;
     align-items: center;
-    margin-bottom: 50px;
+    /* margin-bottom: 50px; */
 }
 
 .home-link-div{
