completed add event form with all validations, and styling and have tested with new events

--- a/frontend/src/components/CreateEventPage/createEventPage.css
+++ b/frontend/src/components/CreateEventPage/createEventPage.css
@@ -266,6 +266,14 @@
     margin-bottom: 16px;
 }
 
+.ce-input-inner-div-price {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 16px;
+}
+
 .ce-input-field-date {
     /* padding-left: 14px; */
     border: none;
