cleaned up formatting and styling on groups and events browse pages

--- a/frontend/src/components/EventDetailPage/eventDetailPage.css
+++ b/frontend/src/components/EventDetailPage/eventDetailPage.css
@@ -72,7 +72,10 @@
     font-weight: bold;
 }
 
-.ed-event-desc {}
+.ed-event-desc {
+    height: 300px;
+    width: 600px;
+}
 
 .ed-rt-side-grp {}
 
