--- a/frontend/src/components/SingleEventListItem/index.css
+++ b/frontend/src/components/SingleEventListItem/index.css
@@ -1,8 +1,9 @@
 .event-list-item {
-
+    position: relative;
     display: flex;
     border-top: 4px solid lightgray;
-    width: 600px
+    width: 600px;
+    height: 180px;
 }
 
 .event-list-item:hover {
@@ -15,17 +16,25 @@
 }
 
 .event-title{
+    font-size: 16px;
     font-weight: Bold;
     padding-top: 10px;
     color: rgb(34, 34, 34);
 }
 
-.event-details{
+.el-event-details{
+
     padding-left: 15px;
 }
 
 .event-citystate{
-    color: rgb(33, 33, 109)
+    padding-top: 10px;
+    display: flex;
+    flex-direction: row;
+    column-gap: 10px;
+    align-items: center;
+    color: rgb(129, 129, 129);
+    padding-right: 20px;
 }
 
 .event-list-image {
@@ -33,20 +42,43 @@
     margin-bottom: 10px;
     margin-left: 20px;
     margin-right: 10px;
-    height: 150px;
+    height: 87px;
     width: 150px;
     border-radius: 10%;
 }
 
+.ed-pin-icon {
+    height: 20px;
+    width: auto;
+    filter: invert(60%) sepia(0%) saturate(0%) hue-rotate(205deg) brightness(94%) contrast(94%);
+
+}
 .prev-img-grp-list {
     display: flex;
-    justify-content: center;
-    align-items: center;
+    justify-content: flex-start;
+    align-items:flex-start;
+}
+
+.el-about-div {
+    overflow: hidden;
+    /* border: 1px solid red; */
+    height: 85px;
+
+    width: 403px;
+    margin: 0;
+
 }
 
 .event-about{
+    display: block;
+    padding-top: 12px;
     text-align: justify;
     color: rgb(34, 34, 34);
+    margin-right: 20px;
+    width: 96%;
+    /* border: 1px solid blue; */
+    height: 85px;
+    overflow: hidden;
 }
 
 .event-details {
@@ -57,6 +89,8 @@
 }
 
 .event-members-prv {
+    position: absolute;
+    bottom: 0;
     padding-bottom: 10px;
     color: gray;
 }
