added bottom padding to browse pages so all list items are always fully visible at bottom of scroll

--- a/frontend/src/components/EventsPage/eventsPage.css
+++ b/frontend/src/components/EventsPage/eventsPage.css
@@ -15,4 +15,10 @@
 .events-page-body{
     display: flex;
     justify-content: center;
+    flex-direction: column;
+}
+
+.el-bot-pad-div {
+    height: 100px;
+    width: 100%;
 }
