--- a/frontend/src/components/GroupsPage/index.css
+++ b/frontend/src/components/GroupsPage/index.css
@@ -14,5 +14,11 @@
 
 .page-body{
     display: flex;
+    flex-direction: column;
     justify-content: center;
+}
+
+.gl-bot-pad-div {
+    height: 100px;
+    width: 100%;
 }
