--- a/frontend/src/components/LandingPage/index.css
+++ b/frontend/src/components/LandingPage/index.css
@@ -6,18 +6,19 @@
 }
 
 .landing-upper{
-    width: 100%;
+    width: 80%;
     display: flex;
     justify-content: space-around;
     flex-direction: row;
-    column-gap: 30px;
+    column-gap: 50px;
 }
 
 .left-upper {
+    padding-top: 65px;
     display: flex;
-    justify-content: flex-end;
+    justify-content: flex-start;
     flex-direction: column;
-    width: 520px;
+    width: 450px;
 }
 
 .cele {
@@ -32,7 +33,7 @@
 }
 
 .right-upper {
-
+padding-top: 50px;
 }
 
 .ur-img {
@@ -84,6 +85,7 @@
     height: 300px;
 }
 
+
 .low-img-div {
     display: flex;
     justify-content: center;
@@ -92,8 +94,15 @@
 .lower-item-title {
     text-align: center;
     font-weight: bold;
-    font-size: 16px;
+    font-size: 18px;
+    padding-bottom: 8px;
     color: rgb(0, 130, 148);
+}
+
+.lower-item-title:hover {
+    text-decoration: underline;
+    text-decoration-thickness: 2px;
+    text-underline-offset: 5px;
 }
 
 .lower-item-p {
@@ -124,4 +133,15 @@
 
 .join-landing-btn:active {
     transform: scale(0.95);
+}
+
+.blob-div {
+    z-index: -10;
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+}
+
+.green-blob {
+    width: 1000px;
 }
